Added data-alternative-name "Happy" to some smile emojis

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
     <h2>People</h2>
     <ul class="people emojis" id="emoji-people">
       <li><div><img src="graphics/emojis/bowtie.png"> :<span class="name">bowtie</span>:</div></li>
-      <li><div><img src="graphics/emojis/smile.png"> :<span class="name">smile</span>:</div></li>
+      <li><div><img src="graphics/emojis/smile.png"> :<span class="name" data-alternative-name="happy">>smile</span>:</div></li>
       <li><div><img src="graphics/emojis/laughing.png"> :<span class="name">laughing</span>:</div></li>
       <li><div><img src="graphics/emojis/blush.png"> :<span class="name">blush</span>:</div></li>
       <li><div><img src="graphics/emojis/smiley.png"> :<span class="name">smiley</span>:</div></li>
@@ -136,7 +136,7 @@
       <li><div><img src="graphics/emojis/hushed.png"> :<span class="name">hushed</span>:</div></li>
       <li><div><img src="graphics/emojis/expressionless.png"> :<span class="name">expressionless</span>:</div></li>
       <li><div><img src="graphics/emojis/unamused.png"> :<span class="name">unamused</span>:</div></li>
-      <li><div><img src="graphics/emojis/sweat_smile.png"> :<span class="name">sweat_smile</span>:</div></li>
+      <li><div><img src="graphics/emojis/sweat_smile.png"> :<span class="name" data-alternative-name="happy, relief">sweat_smile</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat.png"> :<span class="name">sweat</span>:</div></li>
       <li><div><img src="graphics/emojis/disappointed_relieved.png"> :<span class="name">disappointed_relieved</span>:</div></li>
       <li><div><img src="graphics/emojis/weary.png"> :<span class="name">weary</span>:</div></li>
@@ -223,7 +223,6 @@
       <li><div><img src="graphics/emojis/muscle.png"> :<span class="name">muscle</span>:</div></li>
       <li><div><img src="graphics/emojis/metal.png"> :<span class="name">metal</span>:</div></li>
       <li><div><img src="graphics/emojis/fu.png"> :<span class="name">fu</span>:</div></li>
-      <li><div><img src="graphics/emojis/walking.png"> :<span class="name">walking</span>:</div></li>
       <li><div><img src="graphics/emojis/runner.png"> :<span class="name">runner</span>:</div></li>
       <li><div><img src="graphics/emojis/running.png"> :<span class="name">running</span>:</div></li>
       <li><div><img src="graphics/emojis/couple.png"> :<span class="name">couple</span>:</div></li>
@@ -259,8 +258,8 @@
       <li><div><img src="graphics/emojis/cop.png"> :<span class="name">cop</span>:</div></li>
       <li><div><img src="graphics/emojis/angel.png"> :<span class="name">angel</span>:</div></li>
       <li><div><img src="graphics/emojis/princess.png"> :<span class="name">princess</span>:</div></li>
-      <li><div><img src="graphics/emojis/smiley_cat.png"> :<span class="name" data-alternative-name="animal">smiley_cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/smile_cat.png"> :<span class="name" data-alternative-name="animal">smile_cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/smiley_cat.png"> :<span class="name" data-alternative-name="animal, happy">smiley_cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/smile_cat.png"> :<span class="name" data-alternative-name="animal, happy">smile_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/heart_eyes_cat.png"> :<span class="name" data-alternative-name="animal">heart_eyes_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_cat.png"> :<span class="name" data-alternative-name="animal">kissing_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/smirk_cat.png"> :<span class="name" data-alternative-name="animal">smirk_cat</span>:</div></li>
