Added ChatGrape to the list
Added ChatGrape to the list, sent you an email but learned how to use
GitHub in the mean time lol

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
 
     <p id="description">
       <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons listed on this page are supported on
-      <a href="http://campfirenow.com/">Campfire</a>,
+      <a href="https://chatgrape.com/">ChatGrape</a>
+        <a href="http://campfirenow.com/">Campfire</a>,
       <a href="http://github.com/">GitHub</a>,
       <a href="http://basecamp.com/">Basecamp</a>,
       <a href="https://redbooth.com/">Redbooth</a>,
