--- a/public/index.html
+++ b/public/index.html
@@ -34,56 +34,57 @@
 
     <p id="description">
       <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons listed on this page are supported on
-      <a href="http://campfirenow.com/">Campfire</a>,
-      <a href="http://github.com/">GitHub</a>,
-      <a href="http://basecamp.com/">Basecamp</a>,
-      <a href="https://redbooth.com/">Redbooth</a>,
-      <a href="http://trac-hacks.org/wiki/TracEmojiPlugin">Trac</a>,
-      <a href="https://www.flowdock.com/">Flowdock</a>,
-      <a href="https://sprint.ly/">Sprint.ly</a>,
-      <a href="http://kandanapp.com">Kandan</a>,
-      <a href="http://textbox.io/">Textbox.io</a>,
-      <a href="http://kippt.com">Kippt</a>,
-      <a href="https://github.com/tmy/redmine_gemoji">Redmine</a>,
-      <a href="http://about.jabbr.net/">JabbR</a>,
-      <a href="https://trello.com/">Trello</a>,
-      <a href="https://hall.com">Hall</a>,
-      <a href="http://plug.dj/">Plug.dj</a>,
-      <a href="http://qiita.com/">Qiita</a>,
-      <a href="http://www.zendesk.com/">Zendesk</a>,
-      <a href="http://ruby-china.org/">Ruby China</a>,
-      <a href="https://grove.io/">Grove</a>,
-      <a href="https://idobata.io/">Idobata</a>,
-      <a href="https://nodebb.org/">NodeBB Forums</a>,
-      <a href="https://slack.com/">Slack</a>,
-      <a href="https://streamup.com/">Streamup</a>,
-      <a href="http://organisedminds.com/">OrganisedMinds</a>,
-      <a href="https://hackpad.com/">Hackpad</a>,
-      <a href="https://cryptbin.com/">Cryptbin</a>,
-      <a href="https://kato.im">Kato</a>,
-      <a href="http://reportedly.co">Reportedly</a>,
-      <a href="http://cheerfulghost.com">Cheerful Ghost</a>,
-      <a href="https://www.irccloud.com">IRCCloud</a>,
-      <a href="https://dashcube.com">Dashcube</a>,
-      <a href="http://myvideogamelist.com">MyVideoGameList</a>,
-      <a href="https://subrosa.io">Subrosa</a>,
-      <a href="https://www.sococo.com">Sococo</a>,
-      <a href="https://quip.com">Quip</a>,
       <a href="https://andbang.com">And Bang</a>,
+      <a href="http://basecamp.com/">Basecamp</a>,
       <a href="https://bonus.ly">Bonusly</a>,
+      <a href="https://buildkite.com">Buildkite</a>,
+      <a href="http://campfirenow.com/">Campfire</a>,
+      <a href="http://cheerfulghost.com">Cheerful Ghost</a>,
+      <a href="https://cryptbin.com/">Cryptbin</a>,
+      <a href="https://www.bugtrack.in">Damn Bugs</a>,
+      <a href="https://dashcube.com">Dashcube</a>,
+      <a href="https://www.DBook.org">DBook</a>,
       <a href="https://discourse.org">Discourse</a>,
       <a href="https://ello.co">Ello</a>,
-      <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>,
-      <a href="http://gotchosen.com">Got Chosen</a>,
-      <a href="https://www.getflow.com">Flow</a>,
-      <a href="https://readme.io">ReadMe.io</a>,
       <a href="https://esa.io">esa</a>,
-      <a href="https://www.DBook.org">DBook</a>,
+      <a href="https://www.getflow.com">Flow</a>,
+      <a href="https://www.flowdock.com/">Flowdock</a>,
+      <a href="http://github.com/">GitHub</a>,
+      <a href="http://gotchosen.com">Got Chosen</a>,
       <a href="https://groups.io">Groups.io</a>,
+      <a href="https://grove.io/">Grove</a>,
+      <a href="https://hall.com">Hall</a>,
+      <a href="https://hackpad.com/">Hackpad</a>,
+      <a href="https://idobata.io/">Idobata</a>,
+      <a href="https://www.irccloud.com">IRCCloud</a>,
+      <a href="http://about.jabbr.net/">JabbR</a>,
+      <a href="http://kandanapp.com">Kandan</a>,
+      <a href="https://kato.im">Kato</a>,
+      <a href="http://kippt.com">Kippt</a>,
+      <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>,
+      <a href="http://myvideogamelist.com">MyVideoGameList</a>,
+      <a href="https://nodebb.org/">NodeBB Forums</a>,
+      <a href="http://organisedminds.com/">OrganisedMinds</a>,
+      <a href="http://plug.dj/">Plug.dj</a>,
+      <a href="http://qiita.com/">Qiita</a>,
+      <a href="https://quip.com">Quip</a>,
+      <a href="https://readme.io">ReadMe.io</a>,
+      <a href="https://redbooth.com/">Redbooth</a>,
+      <a href="https://github.com/tmy/redmine_gemoji">Redmine</a>,
+      <a href="http://reportedly.co">Reportedly</a>,
+      <a href="http://ruby-china.org/">Ruby China</a>,
+      <a href="https://slack.com/">Slack</a>,
+      <a href="https://www.sococo.com">Sococo</a>,
+      <a href="https://sprint.ly/">Sprint.ly</a>,
+      <a href="https://streamup.com/">Streamup</a>,
+      <a href="https://subrosa.io">Subrosa</a>,
       <a href="https://www.teamwork.com/chat">TeamworkChat</a>,
-      <a href="https://www.bugtrack.in">Damn Bugs</a>,
-      <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>
-      and <a href="https://buildkite.com">Buildkite</a>.<br>
+      <a href="http://telegram.org/">Telegram</a>,
+      <a href="http://textbox.io/">Textbox.io</a>,
+      <a href="http://trac-hacks.org/wiki/TracEmojiPlugin">Trac</a>,
+      <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>,
+      <a href="https://trello.com/">Trello</a>
+      and <a href="http://www.zendesk.com/">Zendesk</a>.<br>
     </p>
 
     <p>
