--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,6 @@
 
     <p id="description">
       <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons listed on this page are supported on
-      <a href="https://chatgrape.com/">ChatGrape</a>,
       <a href="http://campfirenow.com/">Campfire</a>,
       <a href="http://github.com/">GitHub</a>,
       <a href="http://basecamp.com/">Basecamp</a>,
@@ -83,8 +82,9 @@
       <a href="https://groups.io">Groups.io</a>,
       <a href="https://www.teamwork.com/chat">TeamworkChat</a>,
       <a href="https://www.bugtrack.in">Damn Bugs</a>,
-      <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>
-      and <a href="https://buildkite.com">Buildkite</a>.<br>
+      <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>,
+      <a href="https://buildkite.com">Buildkite</a>,
+            and <a href="https://chatgrape.com/">ChatGrape</a>.<br>
     </p>
 
     <p>
