--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,8 @@
       <a href="https://www.bugtrack.in">Damn Bugs</a>,
       <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>,
       <a href="https://buildkite.com">Buildkite</a>,
-      and <a href="https://chatgrape.com/">ChatGrape</a>.<br>
+      <a href="https://chatgrape.com/">ChatGrape</a>,<br>
+      and <a href="https://github.com/squarefractal/githubemoji-dokuwiki">Dokuwiki</a>.<br>
     </p>
 
     <p>
