--- a/public/index.html
+++ b/public/index.html
@@ -84,8 +84,9 @@
       <a href="https://www.bugtrack.in">Damn Bugs</a>,
       <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>,
       <a href="https://buildkite.com">Buildkite</a>,
-      <a href="https://chatgrape.com/">ChatGrape</a>,<br>
-      and <a href="https://github.com/squarefractal/githubemoji-dokuwiki">Dokuwiki</a>.<br>
+      <a href="https://chatgrape.com/">ChatGrape</a>,
+      <a href="https://github.com/squarefractal/githubemoji-dokuwiki">Dokuwiki</a>
+      and <a href="https://usersnap.com">Usersnap</a>.
     </p>
 
     <p>
