--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Emoji cheat sheet for Campfire and GitHub</title>
+    <title>Emoji cheat sheet for GitHub, Basecamp and other services</title>
     <meta charset="utf-8">
-    <meta property="og:title" content="Emoji cheat sheet for Campfire and GitHub" />
-    <meta property="og:image" content="http://www.emoji-cheat-sheet.com/graphics/emojis/thumbsup.png" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.emoji-cheat-sheet.com/" />
+    <meta property="og:title" content="Emoji cheat sheet for GitHub, Basecamp and other services">
+    <meta property="og:image" content="http://www.emoji-cheat-sheet.com/graphics/emojis/thumbsup.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://www.emoji-cheat-sheet.com/">
+    <meta name="description" property="og:description" content="Emoji codes used by GitHub, Basecamp, Slack and other services. Searchable. With emoji meanings.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="shortcut icon" href="favicon.ico">
     <link href="//fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
     <link href="style.css?7" rel="stylesheet">
     <script>
@@ -1063,12 +1064,10 @@
       </p>
       <p>
         &#x2764; View all the super awesome people that have contributed to this page on <a href="https://github.com/arvida/emoji-cheat-sheet.com/graphs/contributors">the GitHub contributors page</a>.<br>
-        &#x2714; Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.<br>
+        &#x2714; Emoji-cheat-sheet.com is not affiliated with the services listed on this page in any way.<br>
         &#x267A; Built using bits from
         <a href="http://www.steamdev.com/zclip">zClip</a>,
-        <a href="http://subtlepatterns.com/">SubtlePatterns</a>,
-        <a href="http://www.givainc.com/labs/jnotify_jquery_plugin.htm">jnotify</a>, and
-        <a href="http://listjs.com/">list.js</a>.
+        <a href="http://www.givainc.com/labs/jnotify_jquery_plugin.htm">jnotify</a>.
       </p>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
