--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,9 @@
       <a href="https://sdelements.github.io/lets-chat">Let's Chat</a>,
       <a href="https://buildkite.com">Buildkite</a>,
       <a href="https://chatgrape.com/">ChatGrape</a>,
-      <a href="https://github.com/squarefractal/githubemoji-dokuwiki">Dokuwiki</a>
-      and <a href="https://usersnap.com">Usersnap</a>.
+      <a href="https://github.com/squarefractal/githubemoji-dokuwiki">Dokuwiki</a>,
+      <a href="https://usersnap.com">Usersnap</a>,
+      and <a href="https://discordapp.com/">Discord</a>.
     </p>
 
     <p>
