Add Status Hero to the list of Emoji-supported apps

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,8 @@
       <a href="https://chatgrape.com/">ChatGrape</a>,
       <a href="https://github.com/squarefractal/githubemoji-dokuwiki">Dokuwiki</a>,
       <a href="https://usersnap.com">Usersnap</a>,
-      and <a href="https://discordapp.com/">Discord</a>.
+      <a href="https://discordapp.com/">Discord</a>,
+      and <a href="https://statushero.com/">Status Hero</a>.
     </p>
 
     <p>
