Add aliases for Japanese goblins (`⊇`)

--- a/public/index.html
+++ b/public/index.html
@@ -272,8 +272,8 @@
       <li><div><img src="graphics/emojis/crying_cat_face.png"> :<span class="name" data-alternative-name="animal">crying_cat_face</span>:</div></li>
       <li><div><img src="graphics/emojis/joy_cat.png"> :<span class="name" data-alternative-name="animal">joy_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/pouting_cat.png"> :<span class="name" data-alternative-name="animal">pouting_cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/japanese_ogre.png"> :<span class="name">japanese_ogre</span>:</div></li>
-      <li><div><img src="graphics/emojis/japanese_goblin.png"> :<span class="name">japanese_goblin</span>:</div></li>
+      <li><div><img src="graphics/emojis/japanese_ogre.png"> :<span class="name" data-alternative-name="namahage">japanese_ogre</span>:</div></li>
+      <li><div><img src="graphics/emojis/japanese_goblin.png"> :<span class="name" data-alternative-name="tengu">japanese_goblin</span>:</div></li>
       <li><div><img src="graphics/emojis/see_no_evil.png"> :<span class="name">see_no_evil</span>:</div></li>
       <li><div><img src="graphics/emojis/hear_no_evil.png"> :<span class="name">hear_no_evil</span>:</div></li>
       <li><div><img src="graphics/emojis/speak_no_evil.png"> :<span class="name">speak_no_evil</span>:</div></li>
