Add aliases for floral objects

--- a/public/index.html
+++ b/public/index.html
@@ -378,12 +378,12 @@
       <li><div><img src="graphics/emojis/poodle.png"> :<span class="name" data-alternative-name="animal">poodle</span>:</div></li>
       <li><div><img src="graphics/emojis/paw_prints.png"> :<span class="name" data-alternative-name="animal">paw_prints</span>:</div></li>
       <li><div><img src="graphics/emojis/bouquet.png"> :<span class="name">bouquet</span>:</div></li>
-      <li><div><img src="graphics/emojis/cherry_blossom.png"> :<span class="name">cherry_blossom</span>:</div></li>
-      <li><div><img src="graphics/emojis/tulip.png"> :<span class="name">tulip</span>:</div></li>
+      <li><div><img src="graphics/emojis/cherry_blossom.png"> :<span class="name" data-alternative-name="floral">cherry_blossom</span>:</div></li>
+      <li><div><img src="graphics/emojis/tulip.png"> :<span class="name" data-alternative-name="floral">tulip</span>:</div></li>
       <li><div><img src="graphics/emojis/four_leaf_clover.png"> :<span class="name">four_leaf_clover</span>:</div></li>
-      <li><div><img src="graphics/emojis/rose.png"> :<span class="name">rose</span>:</div></li>
-      <li><div><img src="graphics/emojis/sunflower.png"> :<span class="name">sunflower</span>:</div></li>
-      <li><div><img src="graphics/emojis/hibiscus.png"> :<span class="name">hibiscus</span>:</div></li>
+      <li><div><img src="graphics/emojis/rose.png"> :<span class="name" data-alternative-name="floral">rose</span>:</div></li>
+      <li><div><img src="graphics/emojis/sunflower.png"> :<span class="name" data-alternative-name="floral">sunflower</span>:</div></li>
+      <li><div><img src="graphics/emojis/hibiscus.png"> :<span class="name" data-alternative-name="floral">hibiscus</span>:</div></li>
       <li><div><img src="graphics/emojis/maple_leaf.png"> :<span class="name">maple_leaf</span>:</div></li>
       <li><div><img src="graphics/emojis/leaves.png"> :<span class="name">leaves</span>:</div></li>
       <li><div><img src="graphics/emojis/fallen_leaf.png"> :<span class="name">fallen_leaf</span>:</div></li>
@@ -585,7 +585,7 @@
       <li><div><img src="graphics/emojis/space_invader.png"> :<span class="name">space_invader</span>:</div></li>
       <li><div><img src="graphics/emojis/video_game.png"> :<span class="name">video_game</span>:</div></li>
       <li><div><img src="graphics/emojis/black_joker.png"> :<span class="name">black_joker</span>:</div></li>
-      <li><div><img src="graphics/emojis/flower_playing_cards.png"> :<span class="name">flower_playing_cards</span>:</div></li>
+      <li><div><img src="graphics/emojis/flower_playing_cards.png"> :<span class="name" data-alternative-name="floral">flower_playing_cards</span>:</div></li>
       <li><div><img src="graphics/emojis/game_die.png"> :<span class="name">game_die</span>:</div></li>
       <li><div><img src="graphics/emojis/dart.png"> :<span class="name">dart</span>:</div></li>
       <li><div><img src="graphics/emojis/mahjong.png"> :<span class="name">mahjong</span>:</div></li>
@@ -966,7 +966,7 @@
       <li><div><img src="graphics/emojis/heavy_plus_sign.png"> :<span class="name">heavy_plus_sign</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_minus_sign.png"> :<span class="name">heavy_minus_sign</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_division_sign.png"> :<span class="name">heavy_division_sign</span>:</div></li>
-      <li><div><img src="graphics/emojis/white_flower.png"> :<span class="name">white_flower</span>:</div></li>
+      <li><div><img src="graphics/emojis/white_flower.png"> :<span class="name" data-alternative-name="floral">white_flower</span>:</div></li>
       <li><div><img src="graphics/emojis/100.png"> :<span class="name">100</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_check_mark.png"> :<span class="name">heavy_check_mark</span>:</div></li>
       <li><div><img src="graphics/emojis/ballot_box_with_check.png"> :<span class="name">ballot_box_with_check</span>:</div></li>
