Add aliases for card suit

--- a/public/index.html
+++ b/public/index.html
@@ -572,10 +572,10 @@
       <li><div><img src="graphics/emojis/swimmer.png"> :<span class="name" data-alternative-name="sport">swimmer</span>:</div></li>
       <li><div><img src="graphics/emojis/surfer.png"> :<span class="name" data-alternative-name="sport">surfer</span>:</div></li>
       <li><div><img src="graphics/emojis/ski.png"> :<span class="name" data-alternative-name="sport">ski</span>:</div></li>
-      <li><div><img src="graphics/emojis/spades.png"> :<span class="name" data-alternative-name="cards">spades</span>:</div></li>
-      <li><div><img src="graphics/emojis/hearts.png"> :<span class="name" data-alternative-name="cards">hearts</span>:</div></li>
-      <li><div><img src="graphics/emojis/clubs.png"> :<span class="name" data-alternative-name="cards">clubs</span>:</div></li>
-      <li><div><img src="graphics/emojis/diamonds.png"> :<span class="name" data-alternative-name="cards">diamonds</span>:</div></li>
+      <li><div><img src="graphics/emojis/spades.png"> :<span class="name" data-alternative-name="cards, suit">spades</span>:</div></li>
+      <li><div><img src="graphics/emojis/hearts.png"> :<span class="name" data-alternative-name="cards, suit">hearts</span>:</div></li>
+      <li><div><img src="graphics/emojis/clubs.png"> :<span class="name" data-alternative-name="cards, suit">clubs</span>:</div></li>
+      <li><div><img src="graphics/emojis/diamonds.png"> :<span class="name" data-alternative-name="cards, suit">diamonds</span>:</div></li>
       <li><div><img src="graphics/emojis/gem.png"> :<span class="name">gem</span>:</div></li>
       <li><div><img src="graphics/emojis/ring.png"> :<span class="name">ring</span>:</div></li>
       <li><div><img src="graphics/emojis/trophy.png"> :<span class="name">trophy</span>:</div></li>
