Add aliases for running is a sport

--- a/public/index.html
+++ b/public/index.html
@@ -228,8 +228,8 @@
       <li><div><img src="graphics/emojis/muscle.png"> :<span class="name">muscle</span>:</div></li>
       <li><div><img src="graphics/emojis/metal.png"> :<span class="name">metal</span>:</div></li>
       <li><div><img src="graphics/emojis/fu.png"> :<span class="name">fu</span>:</div></li>
-      <li><div><img src="graphics/emojis/runner.png"> :<span class="name">runner</span>:</div></li>
-      <li><div><img src="graphics/emojis/running.png"> :<span class="name">running</span>:</div></li>
+      <li><div><img src="graphics/emojis/runner.png"> :<span class="name" data-alternative-name="sport">runner</span>:</div></li>
+      <li><div><img src="graphics/emojis/running.png"> :<span class="name" data-alternative-name="sport">running</span>:</div></li>
       <li><div><img src="graphics/emojis/couple.png"> :<span class="name">couple</span>:</div></li>
       <li><div><img src="graphics/emojis/family.png"> :<span class="name">family</span>:</div></li>
       <li><div><img src="graphics/emojis/two_men_holding_hands.png"> :<span class="name" data-alternative-name="gay">two_men_holding_hands</span>:</div></li>
