Added Bitbucket to the list of sites supporting emoji

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,8 @@
       <a href="https://github.com/squarefractal/githubemoji-dokuwiki">Dokuwiki</a>,
       <a href="https://usersnap.com">Usersnap</a>,
       <a href="https://discordapp.com/">Discord</a>,
-      and <a href="https://statushero.com/">Status Hero</a>.
+      <a href="https://statushero.com/">Status Hero</a>,
+      and <a href="https://bitbucket.org/">Bitbucket</a>.
     </p>
 
     <p>
