Add an alias for fish_cake that called "Naruto" in Japan

--- a/public/index.html
+++ b/public/index.html
@@ -646,7 +646,7 @@
       <li><div><img src="graphics/emojis/fried_shrimp.png"> :<span class="name">fried_shrimp</span>:</div></li>
       <li><div><img src="graphics/emojis/bento.png"> :<span class="name">bento</span>:</div></li>
       <li><div><img src="graphics/emojis/sushi.png"> :<span class="name">sushi</span>:</div></li>
-      <li><div><img src="graphics/emojis/fish_cake.png"> :<span class="name">fish_cake</span>:</div></li>
+      <li><div><img src="graphics/emojis/fish_cake.png"> :<span class="name" data-alternative-name="naruto">fish_cake</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_ball.png"> :<span class="name">rice_ball</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_cracker.png"> :<span class="name">rice_cracker</span>:</div></li>
       <li><div><img src="graphics/emojis/rice.png"> :<span class="name">rice</span>:</div></li>
