Add Gitter to list of emoji supporting apps

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,8 @@
       <a href="https://usersnap.com">Usersnap</a>,
       <a href="https://discordapp.com/">Discord</a>,
       <a href="https://statushero.com/">Status Hero</a>,
-      and <a href="https://bitbucket.org/">Bitbucket</a>.
+      <a href="https://bitbucket.org/">Bitbucket</a>,
+      and <a href="https://gitter.im/">Gitter</a>.
     </p>
 
     <p>
