Update links and jquery

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,8 @@
 
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
-      &#x2708; <b>Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b>
+      &#x2708; <b>Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b><br>
+      &#x2728; <b>Got Firefox 41, Chrome 43 or newer? Click the emoji code and it will be copied to your clipboard even without Flash.</b>
     </p>
 
     <div id="share">
@@ -1066,11 +1067,11 @@
         &#x2764; View all the super awesome people that have contributed to this page on <a href="https://github.com/arvida/emoji-cheat-sheet.com/graphs/contributors">the GitHub contributors page</a>.<br>
         &#x2714; Emoji-cheat-sheet.com is not affiliated with the services listed on this page in any way.<br>
         &#x267A; Built using bits from
-        <a href="http://www.steamdev.com/zclip">zClip</a>,
-        <a href="http://www.givainc.com/labs/jnotify_jquery_plugin.htm">jnotify</a>.
+        <a href="https://github.com/zeroclipboard/zeroclipboard">ZeroClipboard</a>.
       </p>
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="script.js?5"></script>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="script.js?6"></script>
   </body>
 </html>
