git commit -am Added two alternative names to the graduation cap icon
School and graduate

--- a/public/index.html
+++ b/public/index.html
@@ -431,7 +431,7 @@
       <li><div><img src="graphics/emojis/gift_heart.png"> :<span class="name">gift_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/dolls.png"> :<span class="name">dolls</span>:</div></li>
       <li><div><img src="graphics/emojis/school_satchel.png"> :<span class="name">school_satchel</span>:</div></li>
-      <li><div><img src="graphics/emojis/mortar_board.png"> :<span class="name" data-alternative-name="edu, university">mortar_board</span>:</div></li>
+      <li><div><img src="graphics/emojis/mortar_board.png"> :<span class="name" data-alternative-name="edu, university, school, graduate">mortar_board</span>:</div></li>
       <li><div><img src="graphics/emojis/flags.png"> :<span class="name">flags</span>:</div></li>
       <li><div><img src="graphics/emojis/fireworks.png"> :<span class="name">fireworks</span>:</div></li>
       <li><div><img src="graphics/emojis/sparkler.png"> :<span class="name">sparkler</span>:</div></li>
