git commit -am Added vehicle alternative names

--- a/public/index.html
+++ b/public/index.html
@@ -742,10 +742,10 @@
       <li><div><img src="graphics/emojis/tractor.png"> :<span class="name" data-alternative-name="vehicle">tractor</span>:</div></li>
       <li><div><img src="graphics/emojis/blue_car.png"> :<span class="name" data-alternative-name="vehicle">blue_car</span>:</div></li>
       <li><div><img src="graphics/emojis/oncoming_automobile.png"> :<span class="name" data-alternative-name="vehicle">oncoming_automobile</span>:</div></li>
-      <li><div><img src="graphics/emojis/car.png"> :<span class="name" data-alternative-name="vehicle">car</span>:</div></li>
+      <li><div><img src="graphics/emojis/car.png"> :<span class="name" data-alternative-name="vehicle, car">car</span>:</div></li>
       <li><div><img src="graphics/emojis/red_car.png"> :<span class="name" data-alternative-name="vehicle">red_car</span>:</div></li>
-      <li><div><img src="graphics/emojis/taxi.png"> :<span class="name" data-alternative-name="vehicle">taxi</span>:</div></li>
-      <li><div><img src="graphics/emojis/oncoming_taxi.png"> :<span class="name" data-alternative-name="vehicle">oncoming_taxi</span>:</div></li>
+      <li><div><img src="graphics/emojis/taxi.png"> :<span class="name" data-alternative-name="vehicle, car">taxi</span>:</div></li>
+      <li><div><img src="graphics/emojis/oncoming_taxi.png"> :<span class="name" data-alternative-name="vehicle, car">oncoming_taxi</span>:</div></li>
       <li><div><img src="graphics/emojis/articulated_lorry.png"> :<span class="name" data-alternative-name="vehicle">articulated_lorry</span>:</div></li>
       <li><div><img src="graphics/emojis/bus.png"> :<span class="name" data-alternative-name="vehicle">bus</span>:</div></li>
       <li><div><img src="graphics/emojis/oncoming_bus.png"> :<span class="name" data-alternative-name="vehicle">oncoming_bus</span>:</div></li>
