Added more alternatives, for some weather emojis.

--- a/public/index.html
+++ b/public/index.html
@@ -309,14 +309,14 @@
     </ul>
     <h2>Nature</h2>
     <ul class="nature emojis" id="emoji-nature">
-      <li><div><img src="graphics/emojis/sunny.png"> :<span class="name">sunny</span>:</div></li>
+      <li><div><img src="graphics/emojis/sunny.png"> :<span class="name" data-alternative-name="weather">sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/umbrella.png"> :<span class="name" data-alternative-name="water, rain">umbrella</span>:</div></li>
       <li><div><img src="graphics/emojis/cloud.png"> :<span class="name">cloud</span>:</div></li>
       <li><div><img src="graphics/emojis/snowflake.png"> :<span class="name">snowflake</span>:</div></li>
       <li><div><img src="graphics/emojis/snowman.png"> :<span class="name">snowman</span>:</div></li>
       <li><div><img src="graphics/emojis/zap.png"> :<span class="name">zap</span>:</div></li>
-      <li><div><img src="graphics/emojis/cyclone.png"> :<span class="name">cyclone</span>:</div></li>
-      <li><div><img src="graphics/emojis/foggy.png"> :<span class="name">foggy</span>:</div></li>
+      <li><div><img src="graphics/emojis/cyclone.png"> :<span class="name" data-alternative-name="weather">cyclone</span>:</div></li>
+      <li><div><img src="graphics/emojis/foggy.png"> :<span class="name" data-alternative-name="weather">foggy</span>:</div></li>
       <li><div><img src="graphics/emojis/ocean.png"> :<span class="name">ocean</span>:</div></li>
       <li><div><img src="graphics/emojis/cat.png"> :<span class="name" data-alternative-name="animal">cat</span>:</div></li>
       <li><div><img src="graphics/emojis/dog.png"> :<span class="name" data-alternative-name="animal">dog</span>:</div></li>
@@ -421,7 +421,7 @@
       <li><div><img src="graphics/emojis/earth_asia.png"> :<span class="name">earth_asia</span>:</div></li>
       <li><div><img src="graphics/emojis/volcano.png"> :<span class="name">volcano</span>:</div></li>
       <li><div><img src="graphics/emojis/milky_way.png"> :<span class="name">milky_way</span>:</div></li>
-      <li><div><img src="graphics/emojis/partly_sunny.png"> :<span class="name">partly_sunny</span>:</div></li>
+      <li><div><img src="graphics/emojis/partly_sunny.png"> :<span class="name" data-alternative-name="weather">partly_sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/octocat.png"> :<span class="name" data-alternative-name="github">octocat</span>:</div></li>
       <li><div><img src="graphics/emojis/squirrel.png"> :<span class="name" data-alternative-name="animal">squirrel</span>:</div></li>
     </ul>
