Added a few alternative names

--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
       <li><div><img src="graphics/emojis/grimacing.png"> :<span class="name">grimacing</span>:</div></li>
       <li><div><img src="graphics/emojis/confused.png"> :<span class="name">confused</span>:</div></li>
       <li><div><img src="graphics/emojis/hushed.png"> :<span class="name">hushed</span>:</div></li>
-      <li><div><img src="graphics/emojis/expressionless.png"> :<span class="name">expressionless</span>:</div></li>
+      <li><div><img src="graphics/emojis/expressionless.png"> :<span class="name" data-alternative-name="deadpan">expressionless</span>:</div></li>
       <li><div><img src="graphics/emojis/unamused.png"> :<span class="name">unamused</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_smile.png"> :<span class="name" data-alternative-name="happy, relief">sweat_smile</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat.png"> :<span class="name">sweat</span>:</div></li>
@@ -167,7 +167,7 @@
       <li><div><img src="graphics/emojis/sleepy.png"> :<span class="name">sleepy</span>:</div></li>
       <li><div><img src="graphics/emojis/yum.png"> :<span class="name">yum</span>:</div></li>
       <li><div><img src="graphics/emojis/mask.png"> :<span class="name">mask</span>:</div></li>
-      <li><div><img src="graphics/emojis/sunglasses.png"> :<span class="name">sunglasses</span>:</div></li>
+      <li><div><img src="graphics/emojis/sunglasses.png"> :<span class="name" data-alternative-name="shades">sunglasses</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy_face.png"> :<span class="name">dizzy_face</span>:</div></li>
       <li><div><img src="graphics/emojis/imp.png"> :<span class="name">imp</span>:</div></li>
       <li><div><img src="graphics/emojis/smiling_imp.png"> :<span class="name">smiling_imp</span>:</div></li>
@@ -191,7 +191,7 @@
       <li><div><img src="graphics/emojis/star.png"> :<span class="name">star</span>:</div></li>
       <li><div><img src="graphics/emojis/star2.png"> :<span class="name">star2</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy.png"> :<span class="name">dizzy</span>:</div></li>
-      <li><div><img src="graphics/emojis/boom.png"> :<span class="name">boom</span>:</div></li>
+      <li><div><img src="graphics/emojis/boom.png"> :<span class="name" data-alternative-name="explosion">boom</span>:</div></li>
       <li><div><img src="graphics/emojis/collision.png"> :<span class="name">collision</span>:</div></li>
       <li><div><img src="graphics/emojis/anger.png"> :<span class="name">anger</span>:</div></li>
       <li><div><img src="graphics/emojis/exclamation.png"> :<span class="name">exclamation</span>:</div></li>
@@ -263,7 +263,7 @@
       <li><div><img src="graphics/emojis/man_with_gua_pi_mao.png"> :<span class="name">man_with_gua_pi_mao</span>:</div></li>
       <li><div><img src="graphics/emojis/man_with_turban.png"> :<span class="name">man_with_turban</span>:</div></li>
       <li><div><img src="graphics/emojis/construction_worker.png"> :<span class="name">construction_worker</span>:</div></li>
-      <li><div><img src="graphics/emojis/cop.png"> :<span class="name">cop</span>:</div></li>
+      <li><div><img src="graphics/emojis/cop.png"> :<span class="name" data-alternative-name="police, policeman">cop</span>:</div></li>
       <li><div><img src="graphics/emojis/angel.png"> :<span class="name">angel</span>:</div></li>
       <li><div><img src="graphics/emojis/princess.png"> :<span class="name">princess</span>:</div></li>
       <li><div><img src="graphics/emojis/smiley_cat.png"> :<span class="name" data-alternative-name="animal, happy">smiley_cat</span>:</div></li>
@@ -323,7 +323,7 @@
       <li><div><img src="graphics/emojis/mouse.png"> :<span class="name" data-alternative-name="animal">mouse</span>:</div></li>
       <li><div><img src="graphics/emojis/hamster.png"> :<span class="name" data-alternative-name="animal">hamster</span>:</div></li>
       <li><div><img src="graphics/emojis/rabbit.png"> :<span class="name" data-alternative-name="animal">rabbit</span>:</div></li>
-      <li><div><img src="graphics/emojis/wolf.png"> :<span class="name" data-alternative-name="animal">wolf</span>:</div></li>
+      <li><div><img src="graphics/emojis/wolf.png"> :<span class="name" data-alternative-name="animal,dog">wolf</span>:</div></li>
       <li><div><img src="graphics/emojis/frog.png"> :<span class="name" data-alternative-name="animal">frog</span>:</div></li>
       <li><div><img src="graphics/emojis/tiger.png"> :<span class="name" data-alternative-name="animal">tiger</span>:</div></li>
       <li><div><img src="graphics/emojis/koala.png"> :<span class="name" data-alternative-name="animal">koala</span>:</div></li>
