More alternative names

--- a/public/index.html
+++ b/public/index.html
@@ -340,11 +340,11 @@
       <li><div><img src="graphics/emojis/sheep.png"> :<span class="name" data-alternative-name="animal">sheep</span>:</div></li>
       <li><div><img src="graphics/emojis/elephant.png"> :<span class="name" data-alternative-name="animal">elephant</span>:</div></li>
       <li><div><img src="graphics/emojis/panda_face.png"> :<span class="name" data-alternative-name="animal">panda_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/snake.png"> :<span class="name" data-alternative-name="animal">snake</span>:</div></li>
+      <li><div><img src="graphics/emojis/snake.png"> :<span class="name" data-alternative-name="animal,serpent">snake</span>:</div></li>
       <li><div><img src="graphics/emojis/bird.png"> :<span class="name" data-alternative-name="animal">bird</span>:</div></li>
       <li><div><img src="graphics/emojis/baby_chick.png"> :<span class="name" data-alternative-name="animal, bird">baby_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/hatched_chick.png"> :<span class="name" data-alternative-name="animal, bird">hatched_chick</span>:</div></li>
-      <li><div><img src="graphics/emojis/hatching_chick.png"> :<span class="name" data-alternative-name="animal, bird">hatching_chick</span>:</div></li>
+      <li><div><img src="graphics/emojis/hatching_chick.png"> :<span class="name" data-alternative-name="animal, bird,egg">hatching_chick</span>:</div></li>
       <li><div><img src="graphics/emojis/chicken.png"> :<span class="name" data-alternative-name="animal, bird">chicken</span>:</div></li>
       <li><div><img src="graphics/emojis/penguin.png"> :<span class="name" data-alternative-name="animal, bird">penguin</span>:</div></li>
       <li><div><img src="graphics/emojis/turtle.png"> :<span class="name" data-alternative-name="animal">turtle</span>:</div></li>
