--- a/public/index.html
+++ b/public/index.html
@@ -823,7 +823,7 @@
       <li><div><img src="graphics/emojis/arrow_lower_left.png"> :<span class="name">arrow_lower_left</span>:</div></li>
       <li><div><img src="graphics/emojis/arrow_lower_right.png"> :<span class="name">arrow_lower_right</span>:</div></li>
       <li><div><img src="graphics/emojis/arrow_right.png"> :<span class="name">arrow_right</span>:</div></li>
-      <li><div><img src="graphics/emojis/arrow_up.png"> :<span class="name">arrow_up</span>:</div></li>
+      <li><div><img src="graphics/emojis/arrow_up.png"> :<span class="name">up_arrow</span>:</div></li>
       <li><div><img src="graphics/emojis/arrow_upper_left.png"> :<span class="name">arrow_upper_left</span>:</div></li>
       <li><div><img src="graphics/emojis/arrow_upper_right.png"> :<span class="name">arrow_upper_right</span>:</div></li>
       <li><div><img src="graphics/emojis/arrow_double_down.png"> :<span class="name">arrow_double_down</span>:</div></li>
@@ -933,29 +933,29 @@
       <li><div><img src="graphics/emojis/on.png"> :<span class="name">on</span>:</div></li>
       <li><div><img src="graphics/emojis/soon.png"> :<span class="name">soon</span>:</div></li>
       <li><div><img src="graphics/emojis/clock1.png"> :<span class="name">clock1</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock130.png"> :<span class="name">clock130</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock130.png"> :<span class="name">clock1:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock10.png"> :<span class="name">clock10</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock1030.png"> :<span class="name">clock1030</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock1030.png"> :<span class="name">clock10:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock11.png"> :<span class="name">clock11</span>:</div></li>
       <li><div><img src="graphics/emojis/clock1130.png"> :<span class="name">clock1130</span>:</div></li>
       <li><div><img src="graphics/emojis/clock12.png"> :<span class="name" data-alternative-name="midnight, noon">clock12</span>:</div></li>
       <li><div><img src="graphics/emojis/clock1230.png"> :<span class="name">clock1230</span>:</div></li>
       <li><div><img src="graphics/emojis/clock2.png"> :<span class="name">clock2</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock230.png"> :<span class="name">clock230</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock230.png"> :<span class="name">clock2:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock3.png"> :<span class="name">clock3</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock330.png"> :<span class="name">clock330</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock330.png"> :<span class="name">clock3:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock4.png"> :<span class="name">clock4</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock430.png"> :<span class="name">clock430</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock430.png"> :<span class="name">clock4:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock5.png"> :<span class="name">clock5</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock530.png"> :<span class="name">clock530</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock530.png"> :<span class="name">clock5:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock6.png"> :<span class="name">clock6</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock630.png"> :<span class="name">clock630</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock630.png"> :<span class="name">clock6:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock7.png"> :<span class="name">clock7</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock730.png"> :<span class="name">clock730</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock730.png"> :<span class="name">clock7:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock8.png"> :<span class="name">clock8</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock830.png"> :<span class="name">clock830</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock830.png"> :<span class="name">clock8:30</span>:</div></li>
       <li><div><img src="graphics/emojis/clock9.png"> :<span class="name">clock9</span>:</div></li>
-      <li><div><img src="graphics/emojis/clock930.png"> :<span class="name">clock930</span>:</div></li>
+      <li><div><img src="graphics/emojis/clock930.png"> :<span class="name">clock9:30</span>:</div></li>
       <li><div><img src="graphics/emojis/heavy_dollar_sign.png"> :<span class="name">heavy_dollar_sign</span>:</div></li>
       <li><div><img src="graphics/emojis/copyright.png"> :<span class="name">copyright</span>:</div></li>
       <li><div><img src="graphics/emojis/registered.png"> :<span class="name">registered</span>:</div></li>
