--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
     <ul class="people emojis" id="emoji-people">
       <li><div><img src="graphics/emojis/bowtie.png"> :<span class="name">bowtie</span>:</div></li>
       <li><div><img src="graphics/emojis/smile.png"> :<span class="name" data-alternative-name="happy">smile</span>:</div></li>
-      <li><div><img src="graphics/emojis/laughing.png"> :<span class="name">laughing</span>:</div></li>
+      <li><div><img src="graphics/emojis/laughing.png"> :<span class="name" data-alternative-name="lol" >laughing</span>:</div></li>
       <li><div><img src="graphics/emojis/blush.png"> :<span class="name">blush</span>:</div></li>
       <li><div><img src="graphics/emojis/smiley.png"> :<span class="name">smiley</span>:</div></li>
       <li><div><img src="graphics/emojis/relaxed.png"> :<span class="name">relaxed</span>:</div></li>
