--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
       <li><div><img src="graphics/emojis/joy.png"> :<span class="name">joy</span>:</div></li>
       <li><div><img src="graphics/emojis/astonished.png"> :<span class="name">astonished</span>:</div></li>
       <li><div><img src="graphics/emojis/scream.png"> :<span class="name">scream</span>:</div></li>
-      <li><div><img src="graphics/emojis/neckbeard.png"> :<span class="name">neckbeard</span>:</div></li>
+      <li><div><img src="graphics/emojis/neckbeard.png"> :<span class="name"  data-alternative-name="beard" >neckbeard</span>:</div></li>
       <li><div><img src="graphics/emojis/tired_face.png"> :<span class="name">tired_face</span>:</div></li>
       <li><div><img src="graphics/emojis/angry.png"> :<span class="name">angry</span>:</div></li>
       <li><div><img src="graphics/emojis/rage.png"> :<span class="name">rage</span>:</div></li>
