Added flirt as a synonym for wink

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
       <li><div><img src="graphics/emojis/relieved.png"> :<span class="name">relieved</span>:</div></li>
       <li><div><img src="graphics/emojis/satisfied.png"> :<span class="name">satisfied</span>:</div></li>
       <li><div><img src="graphics/emojis/grin.png"> :<span class="name">grin</span>:</div></li>
-      <li><div><img src="graphics/emojis/wink.png"> :<span class="name">wink</span>:</div></li>
+      <li><div><img src="graphics/emojis/wink.png"> :<span class="name" data-alternative-name="flirt">wink</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_winking_eye.png"> :<span class="name">stuck_out_tongue_winking_eye</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue_closed_eyes.png"> :<span class="name">stuck_out_tongue_closed_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/grinning.png"> :<span class="name">grinning</span>:</div></li>
