Added love as synonym for heart eyes

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
       <li><div><img src="graphics/emojis/smiley.png"> :<span class="name">smiley</span>:</div></li>
       <li><div><img src="graphics/emojis/relaxed.png"> :<span class="name">relaxed</span>:</div></li>
       <li><div><img src="graphics/emojis/smirk.png"> :<span class="name">smirk</span>:</div></li>
-      <li><div><img src="graphics/emojis/heart_eyes.png"> :<span class="name">heart_eyes</span>:</div></li>
+      <li><div><img src="graphics/emojis/heart_eyes.png"> :<span class="name" data-alternative-name="love">heart_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_heart.png"> :<span class="name">kissing_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_closed_eyes.png"> :<span class="name">kissing_closed_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/flushed.png"> :<span class="name">flushed</span>:</div></li>
